# tinybot

./: .gitignore  .pre-commit-config.yaml  CLONE.md  LICENSE  MIGRATION_PROGRESS.md  README.md  README_ZH.md  WEBUI_CHAT_INTERACTION_FLOW.md  index.html  package-lock.json  package.json  pyproject.toml  stats.json  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent_loop_runtime_protocol.rs  config_application.rs  config_store.rs  context_checkpoint_lineage.rs  context_checkpoint_lock.rs  desktop_cron.rs  desktop_files.rs  desktop_gateway.rs  desktop_heartbeat.rs  desktop_logging.rs  desktop_update.rs  lib.rs  main.rs  mcp_capability_catalog.rs  mcp_capability_catalog_tests.rs  native_backend_contract.rs  native_browser_integration.rs  native_provider_runtime.rs  settings_registry.rs  skill_definition.rs  skill_resolver.rs  system_prompt.rs  system_prompt_tests.rs  tests.rs  worker_agent_runtime.rs  worker_background.rs  worker_capability.rs  worker_client.rs  worker_config.rs  worker_connection.rs  worker_cowork_runtime.rs  worker_diagnostics.rs  worker_knowledge.rs  worker_manager.rs  worker_memory.rs  worker_permission_profile.rs  worker_protocol.rs  worker_rpc.rs  worker_runtime.rs  worker_secret.rs  (+8 more)
src-tauri/src/adapters/: mcp_http.rs  mcp_http_tests.rs  mcp_stdio.rs  mcp_stdio_tests.rs  mod.rs
src-tauri/src/agent/: mod.rs  provider.rs  provider_tests.rs  runtime_protocol.rs  runtime_protocol_tests.rs
src-tauri/src/automation/: background.rs  background_tests.rs  cron.rs  cron_tests.rs  mod.rs  tasks.rs  tasks_tests.rs
src-tauri/src/collaboration/: mod.rs
src-tauri/src/config/: application.rs  application_tests.rs  mod.rs  registry.rs  registry_tests.rs  runtime.rs  runtime_tests.rs  secrets.rs  secrets_tests.rs  store.rs  store_tests.rs
src-tauri/src/desktop/: bootstrap.rs  files.rs  logging.rs  mod.rs  state.rs  update.rs  update_tests.rs
src-tauri/src/desktop_commands/: agent.rs  config.rs  config_tests.rs  gateway.rs  gateway_tests.rs  knowledge.rs  mod.rs  session.rs  skills.rs  thread.rs  transport.rs  webui.rs  workspace.rs
src-tauri/src/memory/: mod.rs
src-tauri/src/native_agent_bridge/: README.md  agent_flow.rs  attachments.rs  context_checkpoint.rs  history.rs  mod.rs  persistence.rs  result_projection.rs  thread_flow.rs  tool_dispatcher.rs  trace_sink.rs  webui_continuation.rs
src-tauri/src/native_browser/: commands.rs  integration.rs  manager.rs  manager_tests.rs  mod.rs  model.rs  model_tests.rs  platform.rs  platform_tests.rs  unsupported.rs  unsupported_tests.rs  windows.rs  windows_tests.rs
src-tauri/src/protocol/: capability.rs  capability_tests.rs  mod.rs  params.rs  params_tests.rs  protocol_tests.rs  request_id.rs  request_id_tests.rs
src-tauri/src/rpc/: README.md  approval.rs  approval_tests.rs  background_dispatch.rs  channel.rs  channel_tests.rs  config_dispatch.rs  errors.rs  errors_tests.rs  form.rs  form_tests.rs  interaction_dispatch.rs  mcp.rs  mcp_tests.rs  memory_dispatch.rs  method.rs  method_tests.rs  mod.rs  persistence_facade.rs  runtime.rs  runtime_dispatch.rs  runtime_tests.rs  subagent_dispatch.rs  thread_dispatch.rs  tool_dispatch.rs  turn_dispatch.rs  workspace_dispatch.rs
src-tauri/src/runtime/: README.md  agent_task.rs  lifecycle.rs  mcp.rs  mod.rs  observability.rs  observability_tests.rs  turn_execution.rs  turn_execution_tests.rs
src-tauri/src/skills/: definition.rs  definition_tests.rs  mod.rs  resolver.rs  resolver_tests.rs
src-tauri/src/storage/: atomic.rs  atomic_tests.rs
src-tauri/src/tests/: agent_runs.rs  desktop.rs  lifecycle.rs  mod.rs  routing.rs  support.rs  threads.rs  transport.rs  turns.rs
src-tauri/src/threads/: mod.rs  time.rs  time_tests.rs  turn.rs  workspace_store.rs  workspace_store_tests.rs
src-tauri/src/tools/: executor.rs  mod.rs
src-tauri/src/transport/: mod.rs
src-tauri/src/worker_agent_runtime/: README.md  approvals.rs  checkpoint.rs  context.rs  context_contributors.rs  context_manager.rs  continuations.rs  events.rs  hooks.rs  instructions.rs  item_event_projection.rs  items.rs  mod.rs  provider.rs  provider_adapter.rs  provider_loop.rs  result.rs  settings.rs  state.rs  stores.rs  tests.rs  tool_dispatcher.rs  tool_projection.rs  tool_result.rs  tool_router.rs  tool_runtime.rs  usage.rs  user_input.rs
src-tauri/src/worker_knowledge/: chunking.rs  graph.rs  jobs.rs  persistence.rs  repository.rs  retrieval.rs  search.rs  tests.rs  types.rs
src-tauri/src/worker_permission_profile/: effects.rs  effects_tests.rs
src-tauri/src/worker_rollout/: mod.rs  policy.rs  reconstruction.rs  types.rs
src-tauri/src/worker_rpc/: README.md  approval.rs  background_dispatch.rs  config_dispatch.rs  form.rs  interaction_dispatch.rs  knowledge_dispatch.rs  mcp.rs  method.rs  persistence_facade.rs  protocol.rs  runtime.rs  runtime_dispatch.rs  subagent_dispatch.rs  tests.rs  thread_dispatch.rs  tool_dispatch.rs  workspace_dispatch.rs
src-tauri/src/worker_session/: README.md  agent_run.rs  checkpoint.rs  common.rs  history.rs  history_helpers.rs  metadata.rs  metadata_helpers.rs  profile.rs  resource_store.rs  task_progress.rs  task_progress_helpers.rs  temporary_file.rs  tests.rs  turn_persistence.rs  types.rs
src-tauri/src/worker_shell/: process_manager.rs  process_manager_tests.rs  sandbox.rs  sandbox_tests.rs
src-tauri/src/worker_thread/: README.md  live_thread.rs  local_store.rs  mod.rs  runtime.rs  session_adapter.rs  types.rs
src-tauri/src/worker_thread_log/: README.md  agent_run.rs  compression.rs  legacy_session_migration.rs  mod.rs  reader.rs  reconstruction.rs  recorder.rs  replay.rs  rollout_writer.rs  session_adapter.rs  state_db.rs  types.rs
src-tauri/src/worker_tool_registry/: contributors.rs
src-tauri/src/worker_workspace/: patch.rs  path_guard.rs  read.rs  skills.rs  tests.rs  types.rs  write.rs
src-tauri/src/workspace/: mod.rs  patch.rs  skills.rs
src-tauri/tests/: native_backend_contract.rs
src-tauri/tests/crate/: config.rs  desktop.rs  lifecycle.rs  turns.rs  (+4 more)
(+1780 files in other folders)
