[package]
name = "tinybot-desktop"
version = "0.1.0"
description = "Tinybot lightweight desktop host"
authors = ["Tinybot contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tinybot_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-openai = { version = "0.41.1", default-features = false, features = ["native-tls", "chat-completion", "model", "responses", "byot"] }
futures-util = "0.3"
http = "1"
rmcp = { version = "1.8.0", default-features = false, features = ["client", "reqwest-native-tls", "transport-child-process", "transport-streamable-http-client-reqwest", "which-command"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-notification = "2"
tokio = { version = "1", features = ["io-util", "process", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7"
url = "2"

[dev-dependencies]
axum = "0.8"
rmcp = { version = "1.8.0", default-features = false, features = ["client", "macros", "reqwest-native-tls", "server", "transport-child-process", "transport-streamable-http-client-reqwest", "transport-streamable-http-server", "which-command"] }
tokio = { version = "1", features = ["net"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
